<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">TipCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Bill_Total">BILL TOTAL</string>
    <string name="tip">TIP</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="zero">0.00</string>
    <string name="info">A True -geek- program </string>
    <string name="Total_Cost">TOTAL COST</string>
</resources>
