<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/Table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:padding="5dp"
            android:stretchColumns="1,2,3" >

            <!-- Table Row 0 -->

            <TableRow
                android:id="@+id/tablerow_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/billTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/Bill_Total"
                    android:textColor="#0000" >
                </TextView>

                <EditText
                    android:id="@+id/billEdittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" >
                </EditText>
            </TableRow>

            <!-- table row 1 -->

            <TableRow
                android:id="@+id/tablerow_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total_Cost" />

                <TextView
                    android:id="@+id/tenTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="10%"
                    android:textColor="#000" >
                </TextView>

                <TextView
                    android:id="@+id/fifteenTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="15%"
                    android:textColor="#000" >
                </TextView>

                <TextView
                    android:id="@+id/twentyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="20%"
                    android:textColor="#000" >
                </TextView>
            </TableRow>

            <!-- table row 2 -->

            <TableRow
                android:id="@+id/tablerow_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tipTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/tip"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/tip10Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/tip15Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/tip20Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />
            </TableRow>
            <!-- table row 3 -->

            <TableRow
                android:id="@+id/tablerow_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/totalTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/total"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/total10Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/total15Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/total20Editbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />
            </TableRow>

            <!-- table row 4 -->

            <TableRow
                android:id="@+id/tablerow_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="right|center_vertical"
                    android:paddingRight="5dp"
                    android:text="@string/custom"
                    android:textColor="#000" />

                <SeekBar
                    android:id="@+id/custom_seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:progress="18" />

                <TextView
                    android:id="@+id/customTipTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="18%"
                    android:textColor="#000" />
            </TableRow>

            <!-- Table row 5 -->

            <TableRow
                android:id="@+id/tablerow_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tipCustomTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/tip"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/tipCustomEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TotalCustomTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/total"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/totalCustomEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/zero"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic" />

</RelativeLayout>